--- a/src/Views/AppointmentFrame.form
+++ b/src/Views/AppointmentFrame.form
@@ -1,58 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Views.AppointmentFrame">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="5" column-count="22" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="8" column-count="20" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="15" left="150" bottom="15" right="150"/>
     <constraints>
-      <xy x="20" y="20" width="708" height="182"/>
+      <xy x="20" y="-4" width="1269" height="381"/>
     </constraints>
     <properties>
       <background color="-15384261"/>
     </properties>
     <border type="none" title="e"/>
     <children>
-      <component id="7bc74" class="javax.swing.JLabel" binding="titleLabel">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="22" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font size="22"/>
-          <text value="Add an appointment"/>
-        </properties>
-      </component>
-      <component id="a9ad1" class="javax.swing.JButton" binding="addClientButton" default-binding="true">
-        <constraints>
-          <grid row="1" column="21" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="+"/>
-        </properties>
-      </component>
-      <component id="b7988" class="org.jdatepicker.impl.JDatePickerImpl" binding="JDatePickerImpl1" custom-create="true" default-binding="true">
-        <constraints>
-          <grid row="4" column="5" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
       <component id="25148" class="javax.swing.JLabel" binding="clientLabel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="22"/>
           <text value="Client"/>
         </properties>
       </component>
-      <component id="5b139" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="4" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Date"/>
-        </properties>
-      </component>
       <component id="43dda" class="javax.swing.JLabel">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="true"/>
@@ -60,59 +29,14 @@
           <text value="Terapie"/>
         </properties>
       </component>
-      <component id="cbba6" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-        <constraints>
-          <grid row="1" column="9" row-span="1" col-span="8" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <font size="24"/>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="482ea" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
-        <constraints>
-          <grid row="2" column="9" row-span="1" col-span="8" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="50b36" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="4" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Start Hour"/>
-        </properties>
-      </component>
-      <component id="c2450" class="javax.swing.JSpinner" binding="spinner1" default-binding="true">
-        <constraints>
-          <grid row="4" column="11" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="87fcb" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="4" column="12" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="FInish Hour"/>
-        </properties>
-      </component>
-      <component id="ca60a" class="javax.swing.JSpinner" binding="spinner2" default-binding="true">
-        <constraints>
-          <grid row="4" column="13" row-span="1" col-span="6" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
       <scrollpane id="e3709">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="20" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="2" row-span="1" col-span="10" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="9d021" class="javax.swing.JList" binding="list1" default-binding="true">
+          <component id="9d021" class="javax.swing.JList" binding="dateDisponibileList" default-binding="true">
             <constraints/>
             <properties>
               <font size="14"/>
@@ -120,25 +44,7 @@
                 <item value="salut"/>
                 <item value="ce faci"/>
                 <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
+                <item value=""/>
                 <item value="ce faci"/>
                 <item value="ba fraere"/>
                 <item value="salut"/>
@@ -158,6 +64,128 @@
           </component>
         </children>
       </scrollpane>
+      <component id="5b139" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="22"/>
+          <text value="Data"/>
+        </properties>
+      </component>
+      <component id="7bc74" class="javax.swing.JLabel" binding="titleLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="20" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="28"/>
+          <text value="Adaugare programare"/>
+        </properties>
+      </component>
+      <component id="13832" class="javax.swing.JButton" binding="adaugaClientButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="14" row-span="4" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Adauga client"/>
+        </properties>
+      </component>
+      <component id="1564a" class="org.jdatepicker.impl.JDatePickerImpl" binding="JDatePickerImpl1" custom-create="true" default-binding="true">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="5" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="ec009" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <font size="22"/>
+        </properties>
+      </component>
+      <component id="b1813" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="82273" class="javax.swing.JButton" binding="stergeDataButton" default-binding="true">
+        <constraints>
+          <grid row="6" column="14" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Sterge Data"/>
+        </properties>
+      </component>
+      <component id="cf203" class="javax.swing.JButton" binding="inapoiButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="20"/>
+          <text value="Inapoi"/>
+        </properties>
+      </component>
+      <component id="661f0" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="2" row-span="1" col-span="12" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <focusCycleRoot value="true"/>
+          <font size="24"/>
+          <horizontalTextPosition value="0"/>
+          <labelFor value="e3709"/>
+          <text value="Date Disponibile"/>
+        </properties>
+      </component>
+      <component id="d5fb0" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="16"/>
+          <text value="Ora Sfarsit :"/>
+        </properties>
+      </component>
+      <component id="3ec56" class="javax.swing.JButton" binding="salveazaButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="20"/>
+          <text value="Salveaza"/>
+        </properties>
+      </component>
+      <component id="f67d2" class="javax.swing.JSpinner" binding="spinner1" default-binding="true">
+        <constraints>
+          <grid row="3" column="11" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="16"/>
+        </properties>
+      </component>
+      <component id="c8898" class="javax.swing.JSpinner" binding="oraInceputSpinner" default-binding="true">
+        <constraints>
+          <grid row="3" column="8" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="16"/>
+        </properties>
+      </component>
+      <component id="20536" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="16"/>
+          <labelFor value="c8898"/>
+          <text value="Ora Inceput :"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
