--- a/src/Views/AddTerapieFrame.form
+++ b/src/Views/AddTerapieFrame.form
@@ -69,7 +69,7 @@
             <properties>
               <font size="16"/>
               <model>
-                <item value="Ulei de coaie"/>
+                <item value="Ulei de masaj lent"/>
                 <item value="Ulei de masaj brutal"/>
                 <item value="Pat cu puf de pasare exotica"/>
               </model>
@@ -117,7 +117,7 @@
         <properties>
           <font size="22"/>
           <horizontalAlignment value="2"/>
-          <text value="Inapoi"/>
+          <text value="Înapoi"/>
         </properties>
       </component>
     </children>
