--- a/src/Views/AddClientFrame.form
+++ b/src/Views/AddClientFrame.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="100" bottom="30" right="100"/>
     <constraints>
-      <xy x="20" y="20" width="665" height="400"/>
+      <xy x="20" y="20" width="801" height="400"/>
     </constraints>
     <properties>
       <background color="-15384261"/>
@@ -83,7 +83,7 @@
         </constraints>
         <properties>
           <font size="26"/>
-          <text value="Adaugare Client"/>
+          <text value="Adăugare Client"/>
         </properties>
       </component>
       <component id="18ee7" class="javax.swing.JTextField" binding="textField2" default-binding="true">
@@ -97,7 +97,7 @@
           <text value=""/>
         </properties>
       </component>
-      <component id="96046" class="javax.swing.JButton" binding="salveazaButton" default-binding="true">
+      <component id="96046" class="javax.swing.JButton" binding="salveazăButton" default-binding="true">
         <constraints>
           <grid row="5" column="5" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="60"/>
@@ -105,7 +105,7 @@
         </constraints>
         <properties>
           <font size="22"/>
-          <text value="Salveaza"/>
+          <text value="Salvează"/>
         </properties>
       </component>
       <component id="3371c" class="javax.swing.JButton" binding="resetButton" default-binding="true">
@@ -127,7 +127,7 @@
         </constraints>
         <properties>
           <font size="22"/>
-          <text value="Inapoi"/>
+          <text value="Înapoi"/>
         </properties>
       </component>
     </children>
