--- a/src/Views/AppointmentFrame.form
+++ b/src/Views/AppointmentFrame.form
@@ -41,24 +41,11 @@
             <properties>
               <font size="14"/>
               <model>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
+                <item value="29-iun-16"/>
                 <item value=""/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
-                <item value="salut"/>
-                <item value="ce faci"/>
-                <item value="ba fraere"/>
+                <item value="01-iul-16"/>
+                <item value=""/>
+                <item value="04-iul-16"/>
               </model>
             </properties>
           </component>
@@ -79,7 +66,7 @@
         </constraints>
         <properties>
           <font size="28"/>
-          <text value="Adaugare programare"/>
+          <text value="Adăugare programare"/>
         </properties>
       </component>
       <component id="13832" class="javax.swing.JButton" binding="adaugaClientButton" default-binding="true">
@@ -87,7 +74,7 @@
           <grid row="1" column="14" row-span="4" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Adauga client"/>
+          <text value="Adaugă client"/>
         </properties>
       </component>
       <component id="1564a" class="org.jdatepicker.impl.JDatePickerImpl" binding="JDatePickerImpl1" custom-create="true" default-binding="true">
@@ -107,18 +94,12 @@
           <font size="22"/>
         </properties>
       </component>
-      <component id="b1813" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="82273" class="javax.swing.JButton" binding="stergeDataButton" default-binding="true">
+      <component id="82273" class="javax.swing.JButton" binding="ștergeDataButton" default-binding="true">
         <constraints>
           <grid row="6" column="14" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Sterge Data"/>
+          <text value="Șterge Data"/>
         </properties>
       </component>
       <component id="cf203" class="javax.swing.JButton" binding="inapoiButton" default-binding="true">
@@ -127,7 +108,7 @@
         </constraints>
         <properties>
           <font size="20"/>
-          <text value="Inapoi"/>
+          <text value="Înapoi"/>
         </properties>
       </component>
       <component id="661f0" class="javax.swing.JLabel">
@@ -148,16 +129,16 @@
         </constraints>
         <properties>
           <font size="16"/>
-          <text value="Ora Sfarsit :"/>
+          <text value="Oră Sfarșit :"/>
         </properties>
       </component>
-      <component id="3ec56" class="javax.swing.JButton" binding="salveazaButton" default-binding="true">
+      <component id="3ec56" class="javax.swing.JButton" binding="salveazăButton" default-binding="true">
         <constraints>
           <grid row="7" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="20"/>
-          <text value="Salveaza"/>
+          <text value="Salvează"/>
         </properties>
       </component>
       <component id="f67d2" class="javax.swing.JSpinner" binding="spinner1" default-binding="true">
@@ -168,7 +149,7 @@
           <font size="16"/>
         </properties>
       </component>
-      <component id="c8898" class="javax.swing.JSpinner" binding="oraInceputSpinner" default-binding="true">
+      <component id="c8898" class="javax.swing.JSpinner" binding="orăÎnceputSpinner" default-binding="true">
         <constraints>
           <grid row="3" column="8" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -183,7 +164,17 @@
         <properties>
           <font size="16"/>
           <labelFor value="c8898"/>
-          <text value="Ora Inceput :"/>
+          <text value="Oră Început :"/>
+        </properties>
+      </component>
+      <component id="b1813" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="5" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <model>
+            <item value="Masaj de relaxare"/>
+          </model>
         </properties>
       </component>
     </children>
