--- a/src/Views/ConfigurationFrame.form
+++ b/src/Views/ConfigurationFrame.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="30" right="50"/>
     <constraints>
-      <xy x="19" y="20" width="510" height="400"/>
+      <xy x="19" y="20" width="554" height="400"/>
     </constraints>
     <properties>
       <background color="-15384261"/>
@@ -27,7 +27,7 @@
         </constraints>
         <properties>
           <font size="22"/>
-          <text value="Add terapie"/>
+          <text value="Adaugă terapie"/>
         </properties>
       </component>
       <scrollpane id="dd545">
@@ -62,9 +62,9 @@
             <properties>
               <font size="20"/>
               <model>
-                <item value="Costel 1"/>
-                <item value="Costel 2"/>
-                <item value="Costel 3"/>
+                <item value="Terapeut 1"/>
+                <item value="Terapeut 2"/>
+                <item value="Terapeut N"/>
               </model>
             </properties>
           </component>
@@ -78,7 +78,7 @@
         </constraints>
         <properties>
           <font size="22"/>
-          <text value="Add terapeut"/>
+          <text value="Adaugă terapeut"/>
         </properties>
       </component>
       <component id="11292" class="javax.swing.JLabel">
@@ -98,7 +98,7 @@
         </constraints>
         <properties>
           <font size="22"/>
-          <text value="Inapoi"/>
+          <text value="Înapoi"/>
         </properties>
       </component>
       <component id="f04a6" class="javax.swing.JLabel">
@@ -107,7 +107,7 @@
         </constraints>
         <properties>
           <font size="22"/>
-          <text value="Terapeuti"/>
+          <text value="Terapeuți"/>
         </properties>
       </component>
     </children>
