--- a/src/Views/AddProgramareFrame.form
+++ b/src/Views/AddProgramareFrame.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Views.AppointmentFrame">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Views.AddProgramareFrame">
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="8" column-count="20" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="150" bottom="15" right="150"/>
     <constraints>
-      <xy x="20" y="-4" width="1269" height="381"/>
+      <xy x="20" y="-4" width="1269" height="385"/>
     </constraints>
     <properties>
       <background color="-15384261"/>
@@ -71,10 +71,10 @@
       </component>
       <component id="13832" class="javax.swing.JButton" binding="adaugaClientButton" default-binding="true">
         <constraints>
-          <grid row="1" column="14" row-span="4" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="14" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Adaugă client"/>
+          <text value="Adaugă client nou"/>
         </properties>
       </component>
       <component id="1564a" class="org.jdatepicker.impl.JDatePickerImpl" binding="JDatePickerImpl1" custom-create="true" default-binding="true">
@@ -175,6 +175,14 @@
           <model>
             <item value="Masaj de relaxare"/>
           </model>
+        </properties>
+      </component>
+      <component id="ed4d4" class="javax.swing.JButton" binding="adaugăIntervalButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="14" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Adaugă interval"/>
         </properties>
       </component>
     </children>
