--- a/src/Views/AddClientFrame.form
+++ b/src/Views/AddClientFrame.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="6" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="100" bottom="30" right="100"/>
     <constraints>
-      <xy x="20" y="20" width="801" height="400"/>
+      <xy x="20" y="20" width="806" height="400"/>
     </constraints>
     <properties>
       <background color="-15384261"/>
@@ -25,6 +25,7 @@
         </constraints>
         <properties>
           <font size="22"/>
+          <foreground color="-1513216"/>
           <text value="Email"/>
         </properties>
       </component>
@@ -34,6 +35,7 @@
         </constraints>
         <properties>
           <font size="22"/>
+          <foreground color="-1513216"/>
           <text value="Prenume"/>
         </properties>
       </component>
