--- a/src/Views/VizualizationFrame.form
+++ b/src/Views/VizualizationFrame.form
@@ -10,20 +10,20 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="2fd95" class="javax.swing.JButton" binding="saptamanaAnterioaraButton" default-binding="true">
+      <component id="2fd95" class="javax.swing.JButton" binding="săptămânaAnterioarăButton" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Saptamana Anterioara"/>
+          <text value="Săptămâna Anterioară"/>
         </properties>
       </component>
-      <component id="b223" class="javax.swing.JButton" binding="saptamanaUrmatoareButton" default-binding="true">
+      <component id="b223" class="javax.swing.JButton" binding="săptămânaUrmatoareButton" default-binding="true">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Saptamana Urmatoare"/>
+          <text value="Săptămâna  Urmatoare"/>
         </properties>
       </component>
       <component id="16336" class="javax.swing.JButton" binding="inapoiButton" default-binding="true">
@@ -31,7 +31,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Inapoi"/>
+          <text value="Înapoi"/>
         </properties>
       </component>
       <component id="3dea4" class="javax.swing.JButton" binding="reoptimizareButton" default-binding="true">
