--- a/src/Views/AddTerapieFrame.form
+++ b/src/Views/AddTerapieFrame.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Views.AddTerapieFrame">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="5" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="7" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="30" left="150" bottom="30" right="150"/>
     <constraints>
-      <xy x="20" y="20" width="801" height="400"/>
+      <xy x="20" y="20" width="800" height="386"/>
     </constraints>
     <properties>
       <background color="-15384261"/>
@@ -16,30 +16,21 @@
         </constraints>
         <properties>
           <font size="24"/>
-          <text value="Adaugare Terapie"/>
+          <text value="Adăugare Terapie"/>
         </properties>
       </component>
       <component id="e3b4f" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="22"/>
           <text value="Denumire"/>
         </properties>
       </component>
-      <component id="e3fb7" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="1" row-span="2" col-span="3" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font size="22"/>
-          <text value="Necesitati"/>
-        </properties>
-      </component>
       <component id="d64f8" class="javax.swing.JTextField" binding="textField1" default-binding="true">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="1" column="2" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -49,7 +40,7 @@
       </component>
       <component id="86eec" class="javax.swing.JTextField" binding="textField2" default-binding="true">
         <constraints>
-          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="2" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -59,7 +50,7 @@
       </component>
       <scrollpane id="d5da4">
         <constraints>
-          <grid row="3" column="4" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="2" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -77,29 +68,29 @@
           </component>
         </children>
       </scrollpane>
-      <component id="7164f" class="javax.swing.JButton" binding="adaugaButton" default-binding="true">
+      <component id="7164f" class="javax.swing.JButton" binding="adaugăButton" default-binding="true">
         <constraints>
           <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font size="16"/>
-          <text value="Adauga"/>
+          <text value="Adaugă"/>
         </properties>
       </component>
-      <component id="da416" class="javax.swing.JButton" binding="salveazaButton" default-binding="true">
+      <component id="da416" class="javax.swing.JButton" binding="salveazăButton" default-binding="true">
         <constraints>
-          <grid row="4" column="4" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="6" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="60"/>
           </grid>
         </constraints>
         <properties>
           <font size="22"/>
-          <text value="Salveaza"/>
+          <text value="Salvează"/>
         </properties>
       </component>
       <component id="ee4c9" class="javax.swing.JButton" binding="resetButton" default-binding="true">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="6" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="60"/>
           </grid>
         </constraints>
@@ -110,7 +101,7 @@
       </component>
       <component id="92b3c" class="javax.swing.JButton" binding="inapoiButton" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="4" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="6" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="60" height="60"/>
           </grid>
         </constraints>
@@ -118,6 +109,24 @@
           <font size="22"/>
           <horizontalAlignment value="2"/>
           <text value="Înapoi"/>
+        </properties>
+      </component>
+      <component id="e3fb7" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="3" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="22"/>
+          <text value="Listă Necesități"/>
+        </properties>
+      </component>
+      <component id="511ea" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font size="22"/>
+          <text value="Necesitate"/>
         </properties>
       </component>
     </children>
