--- a/src/Views/ConfigurationFrame.form
+++ b/src/Views/ConfigurationFrame.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="30" right="50"/>
     <constraints>
-      <xy x="19" y="20" width="554" height="400"/>
+      <xy x="19" y="20" width="554" height="385"/>
     </constraints>
     <properties>
       <background color="-15384261"/>
@@ -62,9 +62,9 @@
             <properties>
               <font size="20"/>
               <model>
-                <item value="Terapeut 1"/>
-                <item value="Terapeut 2"/>
-                <item value="Terapeut N"/>
+                <item value="Virgil Costache"/>
+                <item value="Alex Georgescu"/>
+                <item value="Valentin Ionescu"/>
               </model>
             </properties>
           </component>
