--- a/src/Views/VizualizationFrame.form
+++ b/src/Views/VizualizationFrame.form
@@ -34,12 +34,12 @@
           <text value="Înapoi"/>
         </properties>
       </component>
-      <component id="3dea4" class="javax.swing.JButton" binding="reoptimizareButton" default-binding="true">
+      <component id="3dea4" class="javax.swing.JButton" binding="optimizareButton">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Reoptimizare"/>
+          <text value="Optimizare"/>
         </properties>
       </component>
       <scrollpane id="2d364">
